<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/sv_left"
        android:layout_width="600dp"
        android:layout_height="match_parent"
        android:background="@color/aliceblue">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_start_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/startScan"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_get_all_storage_devices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toEndOf="@id/btn_start_scan"
                android:padding="5dp"
                android:text="@string/getStorageDevices"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_get_all_audios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_get_all_storage_devices"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/getAllMedias_audio"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_get_all_videos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_get_all_audios"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/getAllMedias_video"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_get_all_images"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_get_all_videos"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/getAllMedias_image"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_get_all_medias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_get_all_images"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/getAllMedias_all"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_get_all_audios_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_get_all_medias"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/getCount_audio"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_get_all_videos_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_get_all_audios_count"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/getCount_video"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_get_all_images_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_get_all_videos_count"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/getCount_image"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_get_all_medias_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_get_all_images_count"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/getCount_all"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_get_media_sheets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_get_all_medias_count"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/getAllMediaSheets_audio"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_add_media_sheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_get_media_sheets"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/addMediaSheet_audio"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_update_media_sheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_add_media_sheet"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/updateMediaSheet_audio"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_get_media_sheet_map_infos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_update_media_sheet"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/getAllMediaSheetMapInfos_audio"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_add_media_sheet_map_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_get_media_sheet_map_infos"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/addMediaSheetMapInfo_audio"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_del_media_sheet_map_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_add_media_sheet_map_info"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/delMediaSheetMapInfo_audio"
                android:textSize="20sp" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/sv_right"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/sv_left">

        <TextView
            android:id="@+id/tv_scanning_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_title_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_scanning_state"
            android:minHeight="50dp"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_title_method" />
    </RelativeLayout>
</RelativeLayout>